[package]
name = "tram_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
prost = "0.12"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.0"
chrono-tz = "0.8.3"
serde_json = "1.0.107"

[build-dependencies]
prost-build = { version = "0.12" }
